# MediaChat

./: .gitignore  CLAUDE.md  readme.md
.claude/: settings.local.json
infrastructure/front/native/: Cargo.toml  README.md  build.rs
infrastructure/front/native/.cargo/: config.toml
infrastructure/front/native/src/: app.rs  events.rs  main.rs  socket.rs  tray.rs  ui.rs  video.rs  windows.rs
infrastructure/front/native/src/media/: active_media.rs  mediachat.rs  mod.rs
